backend & frontend: move hardcoded urls to env config